# yinji-music-agent

./: .env.example  .gitignore  README.md  env_settings.py
Account_setting/: login_in.py  test.py
RagService/: ragService.py
RagService/DocRag/: md5.txt  retriveService.py
RagService/ToolRag/: md5.txt  retriveService.py  text_to_tools.py
RagService/retrieval_core/: __init__.py  bm25_index.py  pipeline.py  rerankers.py  retrivers.py
RagService/vector_store/: config.py  md5.py  vectorStore.py
agent_app/: .gitignore  index.html  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  vite.config.js
agent_app/routers/: __init__.py  agent.py  agent_store.py
agent_app/scripts/: ncm_rpc_server.mjs  start-all.ps1
agent_app/src/: App.vue  main.js
agent_app/src/assets/: main.css
agent_app/src/components/: AgentMessageBubble.vue  MusicPlayerCard.vue
agent_app/src/composables/: useMusicPlayer.js
agent_app/src/router/: index.js
agent_app/src/services/: api.js
agent_app/src/utils/: agentMessage.js  musicCoverTheme.js  sessionCache.js
agent_app/src/views/: Agent.vue
musicAgents/: __init__.py  main.py
musicAgents/core/: deepseek_chat.py  llm_provider.py  logging_utils.py  settings.py  state.py  tracing.py  utils.py
musicAgents/intent_detection/: __init__.py  agent.py
musicAgents/intent_routing/: __init__.py  patterns.py  player_router.py  schemas.py
musicAgents/output_check/: __init__.py  agent.py  reflection.py
musicAgents/tool_execution/: __init__.py  agent.py  (+1 more)
tests/: test_player_intent_routing.py
tools/: __init__.py
(+8 files in other folders)
