[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "yinji-app"
version = "0.0.0"
requires-python = ">=3.10"
description = "FastAPI backend for 音迹 (LLM chat API)"
dependencies = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.22",
  "pydantic>=2",
  "pydantic-settings>=2",
  "langchain-community>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.3",
  "openai>=1",
  "dashscope>=1.20",
  "requests>=2",
  "numpy>=1.26",
  "jieba>=0.42",
  "rank-bm25>=0.2",
  "langchain-chroma>=0.2",
  "langchain-text-splitters>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["routers*"]

[tool.setuptools]
py-modules = ["main"]
